Refactor to use contacts controller and routes

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,4 +1,4 @@
 <h1>Form or whatever</h1>
-<%= form_for @contact, new_contact_path do |f| %>
+<%= form_for @contact do |f| %>
   <%= f.text_field :name, placeholder: 'Name' %>
 <% end %>
