Create contact through form and send to a thank-you page

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -7,4 +7,5 @@
   <%= f.text_field :location, placeholder: 'Location' %>
   <%= f.text_field :twitter, placeholder: 'Twitter' %>
   <%= f.text_area :info, placeholder: 'Tell us about yourself!' %>
+  <%= f.submit 'Submit' %>
 <% end %>
