--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -1,164 +1,176 @@
-.button {
-  position: relative;
-}
+/*.button {*/
+  /*position: relative;*/
+/*}*/
 
-/*.card {
-  height: 170px;
-  width: 100px;
-  border-radius: 10%;
-  padding: 20px;
-  margin: right: 50px;
-  position: relative;
-  top: 0; left: 0; bottom: 0; right: 50px;
-  background-color: #2c3e50;
-  z-index: 1;
-  color: white;
-}*/
+/*!*.card {*/
+  /*height: 170px;*/
+  /*width: 100px;*/
+  /*border-radius: 10%;*/
+  /*padding: 20px;*/
+  /*margin: right: 50px;*/
+  /*position: relative;*/
+  /*top: 0; left: 0; bottom: 0; right: 50px;*/
+  /*background-color: #2c3e50;*/
+  /*z-index: 1;*/
+  /*color: white;*/
+/*}*!*/
 
-.centered {
-  height: 500px;
-  width: 800px;
-  position: absolute;
-  left: 0;
-  top: 10%;
-  width: 50%;
-  text-align: center;
-  font-size: 18px;
-  background-color: #CFCECE;
-}
+/*.centered {*/
+  /*height: 500px;*/
+  /*width: 800px;*/
+  /*position: absolute;*/
+  /*left: 0;*/
+  /*top: 10%;*/
+  /*width: 50%;*/
+  /*text-align: center;*/
+  /*font-size: 18px;*/
+  /*background-color: #CFCECE;*/
+/*}*/
 
-.container {
-    position: relative;
-    z-index: 99;
-}
-/************
-FROM AMBERSTYLE
-*************/
+/*.container {*/
+    /*position: relative;*/
+    /*z-index: 99;*/
+/*}*/
+/*!*************/
+/*FROM AMBERSTYLE*/
+/**************!*/
 
 body {
-  background: #e6e6e6;
+  background: #78bced;
   text-align: center;
   font-family: "Roboto", 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 1em;
 }
 .row {
-  max-width: 62.5rem;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 90rem;
+  /*margin-left: auto;*/
+  /*margin-right: auto;*/
   padding-top: 1em;
   padding-bottom: 1em;
-  background-color: #ffffff;
-  text-align: center;
+  /*background-color: #ffffff;*/
+  /*text-align: center;*/
 }
-.upcase {
-  text-transform: uppercase;
-}
-.big {
-  font-size: 300%;
-}
-.medium-big {
-  font-size: 200%;
-}
+/*.upcase {*/
+  /*text-transform: uppercase;*/
+/*}*/
+/*.big {*/
+  /*font-size: 300%;*/
+/*}*/
+/*.medium-big {*/
+  /*font-size: 200%;*/
+/*}*/
 
-.betterhr {
-  box-sizing: content-box;
-  max-height: 5rem;
-  max-width: 62.5rem;
-  height: 0;
-  border-right: 0;
-  border-top: 0;
-  border-bottom: 1px solid #c9c9c9;
-  border-left: 0;
-  margin: 1.25rem auto;
-  clear: both;
-}
-.orangehr {
-  max-width: 50px;
-  border-color: #ff9012;
-  border-width: 3px;
-  -webkit-margin-before: 0.5em;
-  -webkit-margin-after: 0.5em;
-  -webkit-margin-start: auto;
-  -webkit-margin-end: auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  border: 0;
-  border-top: 3px solid #ff9012;
-}
+/*.betterhr {*/
+  /*box-sizing: content-box;*/
+  /*max-height: 5rem;*/
+  /*max-width: 62.5rem;*/
+  /*height: 0;*/
+  /*border-right: 0;*/
+  /*border-top: 0;*/
+  /*border-bottom: 1px solid #c9c9c9;*/
+  /*border-left: 0;*/
+  /*margin: 1.25rem auto;*/
+  /*clear: both;*/
+/*}*/
+/*.orangehr {*/
+  /*max-width: 50px;*/
+  /*border-color: #ff9012;*/
+  /*border-width: 3px;*/
+  /*-webkit-margin-before: 0.5em;*/
+  /*-webkit-margin-after: 0.5em;*/
+  /*-webkit-margin-start: auto;*/
+  /*-webkit-margin-end: auto;*/
+  /*margin-top: 20px;*/
+  /*margin-bottom: 20px;*/
+  /*border: 0;*/
+  /*border-top: 3px solid #ff9012;*/
+/*}*/
 
-.logo img {
-  height: 18.75em;
-  margin-top: 6em;
+/*.logo img {*/
+  /*height: 18.75em;*/
+  /*margin-top: 6em;*/
 
-}
-img.logo {
-  height: 2em;
-}
+/*}*/
+/*img.logo {*/
+  /*height: 2em;*/
+/*}*/
 
-h1, h2, h3, h4, h5 {
-  color: rgba(0,0,0,0.5);
-  font-weight: 400;
+/*h1, h2, h3, h4, h5 {*/
+  /*color: rgba(0,0,0,0.5);*/
+  /*font-weight: 400;*/
 
-}
-h1 {
-  font-size: 1.8em;
-  margin: 0;
-}
+/*}*/
+/*h1 {*/
+  /*font-size: 1.8em;*/
+  /*margin: 0;*/
+/*}*/
 
-a {
-  color: #ff9012;
+/*a {*/
+  /*color: #ff9012;*/
 
-}
+/*}*/
 
-.doc {
-    margin: 3em 0;
-    font-size: 1.1em;
-    font-weight: 300;
-}
+/*.doc {*/
+    /*margin: 3em 0;*/
+    /*font-size: 1.1em;*/
+    /*font-weight: 300;*/
+/*}*/
 
-a {
-  border: 1px solid white;
-  border-radius: 3px;
-  padding: 0.75em 0.7em;
-  color: white;
-  text-decoration: none;
-  transition: color 0.1s linear;
+/*a {*/
+  /*border: 1px solid white;*/
+  /*border-radius: 3px;*/
+  /*padding: 0.75em 0.7em;*/
+  /*color: white;*/
+  /*text-decoration: none;*/
+  /*transition: color 0.1s linear;*/
 
-}
+/*}*/
 
-/****************************************
-FORMS
-*****************************************/
-select {
-  width: 100%;
-  padding: 16px 20px;
-  border: none;
-  border-radius: 4px;
-  background-color: #f1f1f1;
-}
-textarea {
-  width: 50%;
-  height: 150px;
-  padding: 12px 20px;
-  box-sizing: border-box;
-  border: 2px solid #ccc;
-  border-radius: 4px;
-  background-color: #f8f8f8;
-  resize: none;
-}
-input {
-  box-sizing: border-box;
-  border: 2px solid #ccc;
-  border-radius: 4px;
-  background-color: #f8f8f8;
-  padding-left: 5px;
-}
+/*!*****************************************/
+/*FORMS*/
+/******************************************!*/
+/*select {*/
+  /*width: 100%;*/
+  /*padding: 16px 20px;*/
+  /*border: none;*/
+  /*border-radius: 4px;*/
+  /*background-color: #f1f1f1;*/
+/*}*/
+/*textarea {*/
+  /*width: 50%;*/
+  /*height: 150px;*/
+  /*padding: 12px 20px;*/
+  /*box-sizing: border-box;*/
+  /*border: 2px solid #ccc;*/
+  /*border-radius: 4px;*/
+  /*background-color: #f8f8f8;*/
+  /*resize: none;*/
+/*}*/
+/*input {*/
+  /*box-sizing: border-box;*/
+  /*border: 2px solid #ccc;*/
+  /*border-radius: 4px;*/
+  /*background-color: #f8f8f8;*/
+  /*padding-left: 5px;*/
+/*}*/
+/*.button {*/
+  /*background-color: #ff9012;*/
+  /*border: none;*/
+  /*color: white;*/
+  /*padding: 8px 8px;*/
+  /*text-decoration: none;*/
+  /*margin: 4px 2px;*/
+  /*cursor: pointer;*/
+/*}*/
+
+.log-in-form {
+    border: 1px solid #cacaca;
+    background-color: white;
+    padding: 20px;
+    margin: auto;
+    border-radius: 3px;
+    box-shadow: 3px 3px 10px 0 #2E2F30}
+
 .button {
-  background-color: #ff9012;
-  border: none;
-  color: white;
-  padding: 8px 8px;
-  text-decoration: none;
-  margin: 4px 2px;
-  cursor: pointer;
+    background-color: #ff9012;
 }
