--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,11 +1,21 @@
-<h1>Form or whatever</h1>
-<%= form_for @contact do |f| %>
-  <%= f.text_field :name, placeholder: 'Name', autofocus: true %>
-  <%= f.email_field :email, placeholder: 'Email' %>
-  <%= f.text_field :company, placeholder: 'Company' %>
-  <%= f.text_field :role, placeholder: 'Role' %>
-  <%= f.text_field :location, placeholder: 'Location' %>
-  <%= f.text_field :twitter, placeholder: 'Twitter' %>
-  <%= f.text_area :info, placeholder: 'Tell us about yourself!' %>
-  <%= f.submit 'Submit' %>
-<% end %>
+<div class="row ">
+  <div class="medium-6 medium-centered large-4 large-centered columns log-in-form">
+
+    <%= form_for @contact do |f| %>
+      <div class="row column">
+        <h4 class="text-center">Add your contact information</h4>
+        <!--<label>Email-->
+          <!--<input type="text" placeholder="somebody@example.com">-->
+        <%= f.text_field :name, placeholder: 'Name', autofocus: true %>
+        <%= f.email_field :email, placeholder: 'Email' %>
+        <%= f.text_field :company, placeholder: 'Company' %>
+        <%= f.text_field :role, placeholder: 'Role' %>
+        <%= f.text_field :location, placeholder: 'Location' %>
+        <%= f.text_field :twitter, placeholder: 'Twitter' %>
+        <%= f.text_area :info, placeholder: 'Tell us about yourself!' %>
+        <%= f.submit 'Submit', class: 'button expanded' %>
+      </div>
+    <% end %>
+  </div>
+</div>
+
